--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
     "type": "git",
     "url": "git://github.com/ChristianGrete/grunt-register-tasks.git"
   },
-  "version": "1.0.0"
+  "version": "1.0.1-dev"
 }
