Added "gruntplugin" keyword

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   ],
   "homepage": "https://github.com/ChristianGrete/grunt-register-tasks",
   "keywords": [
+    "gruntplugin",
     "grunt",
     "register",
     "multiple",
