--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "npm": "^2.1.6"
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-jsdoc": "^0.5.7",
+    "grunt-jsonlint": "^1.0.4",
+    "load-grunt-tasks": "^1.0.0",
+    "npm": "^2.1.6",
+    "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.33",
