--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-jsdoc": "^0.5.7",
     "grunt-jsonlint": "^1.0.4",
-    "load-grunt-tasks": "^1.0.0",
-    "npm": "^2.1.6",
+    "load-grunt-tasks": "^2.0.0",
+    "npm": "^2.1.18",
     "time-grunt": "^1.0.0"
   },
   "engines": {
-    "node": ">=0.10.33",
-    "npm": ">=2.1.6"
+    "node": ">=0.10.35",
+    "npm": ">=2.1.18"
   },
   "files": [
     "dist/grunt-register-tasks.js"
